force-app/main/default/objects/Apttus__Agreement_Rule_Condition__c/Apttus__Agreement_Rule_Condition__c.object-meta.xml
<CustomObject>
    <description>Specifies a condition used to evaluate an agreement rule</description>
    <label>Agreement Rule Condition</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>