force-app/main/default/objects/Apttus__Agreement_Rule_Condition__c/fields/Apttus__Agreement_Rule__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Agreement_Rule__c</fullName>
    <description>The associated agreement rule</description>
    <inlineHelpText>The associated agreement rule</inlineHelpText>
    <label>Agreement Rule</label>
    <referenceTo>Apttus__Agreement_Rule__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>R00N50000001aduAEAQ</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>