force-app/main/default/objects/Apttus__Agreement_Rule_Condition__c/fields/Apttus__Join__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Join__c</fullName>
    <description>Logical operator for combining multiple field expressions in a query</description>
    <label>Boolean Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>