force-app/main/default/objects/Apttus__Agreement_Rule_Condition__c/fields/Apttus__Number__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Number__c</fullName>
    <description>Condition sequence</description>
    <inlineHelpText>Condition sequence</inlineHelpText>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>