force-app/main/default/objects/Apttus__Agreement_Rule_Condition__c/fields/Apttus__Object__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Object__c</fullName>
    <description>Specifies the type of the object to query.</description>
    <inlineHelpText>The object type to query</inlineHelpText>
    <label>SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>